--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
-        "http-proxy-middleware": "^0.20.0",
+        "http-proxy-middleware": "^2.0.4",
         "ip": "^1.1.5",
         "jquery": "^3.5.1",
         "react": "^16.13.1",
@@ -54,10 +54,11 @@
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^2.5.0",
         "eslint-scope": "^4.0.3",
+        "http": "^0.0.1-security",
         "husky": "^4.2.5",
         "lint-staged": "^10.2.7",
-        "prettier": "^2.0.5",
-        "node-sass": "^4.14.1"
+        "node-sass": "^4.14.1",
+        "prettier": "^2.0.5"
     },
     "husky": {
         "hooks": {
