--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,7 +8,7 @@
     },
     "parser": "babel-eslint",
     // "extends": ["airbnb","prettier", "prettier/react","eslint:recommended", "plugin:react/recommended"],
-    "extends": ["prettier/react", "eslint:recommended", "plugin:react/recommended"],
+    "extends": ["prettier", "eslint:recommended", "plugin:react/recommended"],
     // "extends": "eslint:recommended",
     // "extends": ["eslint:recommended", "plugin:react/recommended"],
 
@@ -54,9 +54,8 @@
     "rules": {
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
-        "prettier/prettier": "error",
         "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
         "react/forbid-prop-types": [0, {"forbid": ["any"]}],
-        "react/prop-types": 0
+        "react/prop-types": 0       
     }
 }
